Removed deprecated isBlank method; Renamed Utils class to SafeParsingUtils; Some refactoring;