@@ -1,7 +1,3 @@
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
 package ua.stetsenkoinna.graphpresentation;
 
 import ua.stetsenkoinna.PetriObj.ExceptionInvalidNetStructure;
@@ -42,7 +38,7 @@ import ua.stetsenkoinna.graphnet.GraphArcOut;
 import ua.stetsenkoinna.graphnet.GraphPetriPlace;
 import ua.stetsenkoinna.graphnet.GraphPetriTransition;
 import ua.stetsenkoinna.graphnet.GraphPetriNet;
-import ua.stetsenkoinna.utils.Utils;
+import ua.stetsenkoinna.utils.SafeParsingUtils;
 import ua.stetsenkoinna.utils.MessageHelper;
 
 import java.awt.geom.Point2D;
@@ -330,7 +326,7 @@ public class FileUse {
         ArrayList<VerticalSet> sets = new ArrayList<>();
 
         // first transition
-        PetriT firstTran = availPetriTrans.remove(0);
+        PetriT firstTran = availPetriTrans.removeFirst();
         VerticalSet firstSet = new VerticalSet(false);
         firstSet.AddElement(firstTran);
         sets.add(firstSet);
@@ -380,7 +376,7 @@ public class FileUse {
 
                 if (!inTrans.isEmpty()) {
                     if (lastSetIndex == 0) {
-                        sets.add(0, new VerticalSet(!lastSet.IsForPlaces()));
+                        sets.addFirst(new VerticalSet(!lastSet.IsForPlaces()));
                         lastSetIndex = 1;
                     }
                 }
@@ -431,7 +427,7 @@ public class FileUse {
 
                 if (!inPlaces.isEmpty()) {
                     if (lastSetIndex == 0) {
-                        sets.add(0, new VerticalSet(!lastSet.IsForPlaces()));
+                        sets.addFirst(new VerticalSet(!lastSet.IsForPlaces()));
                         lastSetIndex = 1;
                     }
                 }
@@ -459,8 +455,8 @@ public class FileUse {
         double x = 0, y;
 
         boolean hasLoops = false; // "hasLoops" added by Katya 04.12.2016
-        firstSet = sets.get(0);
-        VerticalSet lastSet = sets.get(sets.size() - 1);
+        firstSet = sets.getFirst();
+        VerticalSet lastSet = sets.getLast();
         if (!Objects.equals(lastSet.IsForPlaces(), firstSet.IsForPlaces())) {
             VerticalSet setWithPlaces = firstSet.IsForPlaces() ? firstSet : lastSet;
             VerticalSet setWithTrans = firstSet.IsForPlaces() ? lastSet : firstSet;
@@ -671,12 +667,12 @@ public class FileUse {
             String match2 = matcher.group(2);
             String pName = match1;
             String markStr = match2;
-            int mark = Utils.tryParseInt(markStr) // added by Katya 08.12.2016
+            int mark = SafeParsingUtils.tryParseInt(markStr) // added by Katya 08.12.2016
                 ? Integer.parseInt(markStr)
                 : 0;
             d_P.add(new PetriP(pName, mark));
 
-            if (!Utils.tryParseInt(markStr)) { // added by Katya 08.12.2016
+            if (!SafeParsingUtils.tryParseInt(markStr)) { // added by Katya 08.12.2016
                 d_P.get(d_P.size() - 1).setMarkParam(markStr);
             }
         }
@@ -689,14 +685,14 @@ public class FileUse {
             String probability = matcher.group(3);
             String tName = match1;
             String parametrStr = match2;
-            double parametr = Utils.tryParseDouble(parametrStr) // added by Katya 08.12.2016
+            double parametr = SafeParsingUtils.tryParseDouble(parametrStr) // added by Katya 08.12.2016
                 ? Double.parseDouble(parametrStr)
                 : 0;
             PetriT place = new PetriT(tName, parametr);
-            if (!Utils.tryParseDouble(parametrStr)) { // added by Katya 08.12.2016
+            if (!SafeParsingUtils.tryParseDouble(parametrStr)) { // added by Katya 08.12.2016
                 place.setParametrParam(parametrStr);
             }
-            if (!Utils.isBlank(probability)) {
+            if (!(probability == null || probability.isBlank())) {
                 try {
                     double prob = Double.parseDouble(probability);
                     place.setProbability(prob);
@@ -744,11 +740,11 @@ public class FileUse {
             String match2 = matcher.group(2);
             int j = Integer.parseInt(match1);
             String priorityStr = match2;
-            int priority = Utils.tryParseInt(priorityStr) // added by Katya 08.12.2016
+            int priority = SafeParsingUtils.tryParseInt(priorityStr) // added by Katya 08.12.2016
                 ? Integer.parseInt(priorityStr)
                 : 0;
             d_T.get(j).setPriority(priority);
-            if (!Utils.tryParseInt(priorityStr)) { // added by Katya 08.12.2016
+            if (!SafeParsingUtils.tryParseInt(priorityStr)) { // added by Katya 08.12.2016
                 d_T.get(j).setPriorityParam(priorityStr);
             }
         }
@@ -760,11 +756,11 @@ public class FileUse {
             String match2 = matcher.group(2);
             int j = Integer.parseInt(match1);
             String probabilityStr = match2;
-            double probability = Utils.tryParseDouble(probabilityStr) // added by Katya 08.12.2016
+            double probability = SafeParsingUtils.tryParseDouble(probabilityStr) // added by Katya 08.12.2016
                 ? Double.parseDouble(probabilityStr)
                 : 1;
             d_T.get(j).setProbability(probability);
-            if (!Utils.tryParseDouble(probabilityStr)) { // added by Katya 08.12.2016
+            if (!SafeParsingUtils.tryParseDouble(probabilityStr)) { // added by Katya 08.12.2016
                 d_T.get(j).setProbabilityParam(probabilityStr);
             }
         }
@@ -779,11 +775,11 @@ public class FileUse {
             int numP = Integer.parseInt(match1);
             int numT = Integer.parseInt(match2);
             String quantityStr = match3;
-            int quantity = Utils.tryParseInt(quantityStr) // added by Katya 08.12.2016
+            int quantity = SafeParsingUtils.tryParseInt(quantityStr) // added by Katya 08.12.2016
                 ? Integer.parseInt(quantityStr)
                 : 1;
             d_In.add(new ArcIn(d_P.get(numP), d_T.get(numT), quantity));
-            if (!Utils.tryParseInt(quantityStr)) { // added by Katya 08.12.2016
+            if (!SafeParsingUtils.tryParseInt(quantityStr)) { // added by Katya 08.12.2016
                 d_In.get(d_In.size() - 1).setKParam(quantityStr);
             }
         }
@@ -811,12 +807,12 @@ public class FileUse {
             int numT = Integer.parseInt(match1);
             int numP = Integer.parseInt(match2);
             String quantityStr = match3;
-            int quantity = Utils.tryParseInt(quantityStr) // added by Katya 08.12.2016
+            int quantity = SafeParsingUtils.tryParseInt(quantityStr) // added by Katya 08.12.2016
                 ? Integer.parseInt(quantityStr)
                 : 1;
             //System.out.println("q_Out "+quantity);
             d_Out.add(new ArcOut(d_T.get(numT), d_P.get(numP), quantity));
-            if (!Utils.tryParseInt(quantityStr)) { // added by Katya 08.12.2016
+            if (!SafeParsingUtils.tryParseInt(quantityStr)) { // added by Katya 08.12.2016
                 d_Out.get(d_Out.size() - 1).setKParam(quantityStr);
             }
         }
@@ -831,65 +827,6 @@ public class FileUse {
     }
 
     public String openMethod(PetriNetsPanel panel, String methodFullName, JFrame frame) throws ExceptionInvalidNetStructure { // added by Katya 16.10.2016
-        // also TODO: prevent networks with the same name from being saved
-        // also TODO: check code syntax before saving?
-        
-        /*String methodName = methodFullName.substring(0, methodFullName.indexOf("("));
-        
-        String className = "LibNet.NetLibrary";
-        
-        String netName = "";
-        
-        
-        try {
-            // TODO: maybe pre-comile on program launch in background thread
-            if (netLibraryClass == null) {
-                //  reading NetLibrary.java 
-                Path path = FileSystems.getDefault().getPath(
-                        System.getProperty("user.dir"),"src","LibNet", "NetLibrary.java"); 
-                String libraryText = Files.readString(path);
-                
-                libraryText = preProcessNetLibraryCode(libraryText);
-                
-                // we need a new instance of class loader each time. See NetLibraryClassLoader.java for details 
-                NetLibraryClassLoader loader = new NetLibraryClassLoader(getClass().getClassLoader());
-                netLibraryClass = CompilerUtils.CACHED_COMPILER.loadFromJava(loader, className, libraryText);
-
-            }
-            PetriNet net = (PetriNet)netLibraryClass.getMethod(methodName).invoke(null);
-            
-            // moving the prev. screen content and adding net  
-            PetriNetsFrame petriNetsFrame = (PetriNetsFrame)frame;
-            JScrollPane pane = petriNetsFrame.GetPetriNetPanelScrollPane();
-            Point paneCenter = new Point(pane.getLocation().x+pane.getBounds().width/2, pane.getLocation().y+pane.getBounds().height/2);
-           
-            GraphPetriNet graphNet  = generateGraphNetBySimpleNet(panel ,net, paneCenter);
-       
-            panel.addGraphNet(graphNet);
-            netName = graphNet.getPetriNet().getName();
-            panel.repaint();
-            
-        } catch (FileNotFoundException e) {
-            Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, e.getMessage(), e);
-            e.printStackTrace();
-        } catch (IOException e) {
-                        Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, e.getMessage(), e);
-e.printStackTrace();
-        } catch (ClassNotFoundException e) { // from CACHED_COMPILER.loadFromJava()
-                        Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, e.getMessage(), e);
-e.printStackTrace();
-        }  catch (NoSuchMethodException e) { // either no constuctor with 0 params or no method with given name
-            e.printStackTrace();
-        } catch (IllegalAccessException e) { // from newInstance() or invoke()
-                        Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, e.getMessage(), e);
-e.printStackTrace();
-        } catch (InvocationTargetException e) { // from newInstance() or invoke()
-                        Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, e.getMessage(), e);
-e.printStackTrace();
-        }*/
-        
-        
-        // The following is old code 
         String methodName = methodFullName.substring(0, methodFullName.indexOf("(")); // modified by Katya 22.11.2016 (till the "try" block)
         String paramsString = methodFullName.substring(methodFullName.indexOf("(") + 1);
         paramsString = paramsString.substring(0, paramsString.length() - 1);
@@ -898,9 +835,7 @@ e.printStackTrace();
         try {
             StringBuilder libraryText = new StringBuilder();
 
-            // Use FilePathConfig for cross-platform path resolution
             Path path = FilePathConfig.getNetLibraryPath();
-
             // Check if file exists
             if (path == null) {
                 throw new FileNotFoundException("NetLibrary.java not found in any configured location. Working directory: " +
@@ -980,14 +915,9 @@ e.printStackTrace();
     public String preProcessNetLibraryCode(String code) {      
         // remove arguments from method header
         code = code.replaceAll("public\\s+static\\s+PetriNet\\s+(\\w+)\\s*\\((.+)\\)", "public static PetriNet $1()");
-        
-        // parametrized place
-        // Node: doesn't support whitespace between any elements of this statement (e.g. dot and method name)
-        // to add such support, add \s* where appropriate
         Matcher matcher = Pattern.compile("d_P\\.add\\(new PetriP\\(\"([^\"]+)\",\\s*(\\w+)\\)\\);").matcher(code);
-        
-        // Java 8 code
-        StringBuffer sb = new StringBuffer();
+
+        StringBuilder sb = new StringBuilder();
         while (matcher.find()) {
             String markersParameter = matcher.group(2);
             boolean isInt;
@@ -1000,13 +930,6 @@ e.printStackTrace();
             if (!isInt) {
                 String placeName = matcher.group(1);
                 String variableName = placeName;
-                
-                // replace the entire line like so
-                /*
-                    PetriP @varName@ = new PetriP("@pName@", 0);\n
-                    @varName@.setMarkParam("@markStr@");\n
-                    d_P.add(@varName@);
-                */
                 String replacement = 
                         "PetriP " + variableName + " = new PetriP(\""+placeName+"\", 0);\n"
                         + variableName + ".setMarkParam(\""+markersParameter+"\");\n" 
@@ -1016,67 +939,12 @@ e.printStackTrace();
             matcher.appendReplacement(sb, matcher.group(0));
         }
         matcher.appendTail(sb);
-        
         code = sb.toString();
-        
-        // java 17 code
-        /*code = matcher.replaceAll(matchRes -> {
-            String markersParameter = matchRes.group(2);
-            boolean isInt;
-            try {
-                int markers = Integer.parseInt(markersParameter);
-                isInt = true;
-            } catch (NumberFormatException e) {
-                isInt = false;
-            }
-            if (!isInt) {
-                String placeName = matcher.group(1);
-                String variableName = placeName;
-                
-                // replace the entire line like so
-                //
-                //    PetriP @varName@ = new PetriP("@pName@", 0);\n
-                //    @varName@.setMarkParam("@markStr@");\n
-                //    d_P.add(@varName@);
-                //
-                String replacement = 
-                        "PetriP " + variableName + " = new PetriP(\""+placeName+"\", 0);\n"
-                        + variableName + ".setMarkParam(\""+markersParameter+"\");\n" 
-                        + "d_P.add("+variableName+");";
-                return replacement;
-            } 
-            return matchRes.group(0);
-        });*/
-        
-        // parametrized transition delay mean
-        /*
-            PetriT @name@ = new PetriT("@name@",0); 
-            @name@.setParametrParam("@paramname@");
-            d_T.add(@name@);
-            
-            @name@ - group 1
-            @paramname@ - group2
-        */
         code = code.replaceAll("d_T\\.add\\(new PetriT\\(\"([^\"]+)\",\\s*(\\w+)\\)\\);",
                 "PetriT $1 = new PetriT(\"$1\",0);\n" 
                         + "$1.setParametrParam(\"$2\");\n" 
                         + "d_T.add($1);");
-        
-        // parametrized transition priority
-        
-        // parametrized transition probability
-        
-        // parametrized distribution name?
-        
-        // parametrized number of GraphArcOut links
-        
-        // parametrized information link
-        
-        
-        //System.out.println(code);
-        
-        
-        return code; // TODO
+        return code;
     }
 
     private String generateArgumentsString(PetriNet net) { // added by Katya 08.12.2016
@@ -1364,10 +1232,8 @@ public void saveNetAsMethod(PetriNet pnet, JTextArea area) throws ExceptionInval
             area.append("\t" + "d_Out.add(new ArcOut(" + "d_T.get(" + Out.getNumT() + ")," + "d_P.get(" + Out.getNumP() + ")," + quantityStr + "));\n");
         }
 
-        area.append(
-                "\t" + "PetriNet d_Net = new PetriNet(\"" + net.getName() + "\",d_P,d_T,d_In,d_Out);\n");
+        area.append("\t" + "PetriNet d_Net = new PetriNet(\"" + net.getName() + "\",d_P,d_T,d_In,d_Out);\n");
 
-      //  area.append("\n\t" + "return d_Net;\n"); // modified by Katya 05.12.2016
          area.append(
                 "\t" + "PetriP.initNext();\n"
                 + "\t" + "PetriT.initNext();\n"
@@ -1381,7 +1247,6 @@ public void saveNetAsMethod(PetriNet pnet, JTextArea area) throws ExceptionInval
 
     public void saveMethodInNetLibrary(JTextArea area) {  //added by Inna 20.05.2013
         try {
-
             // Use FilePathConfig for cross-platform path resolution
             Path path = FilePathConfig.getNetLibraryPath();
 
@@ -1393,11 +1258,9 @@ public void saveNetAsMethod(PetriNet pnet, JTextArea area) throws ExceptionInval
             }
 
             String pathNetLibrary = path.toString(); //added by Inna 29.09.2018
-
             RandomAccessFile f = new RandomAccessFile(pathNetLibrary, "rw");
-            // System.out.println("The path of Library of nets is\t"+path.toString());
-
             long n = f.length();
+
             if (n == 0) {
                 f.writeBytes("package LibNet;\n"
                         +"import PetriObj.ExceptionInvalidNetStructure;\n"
@@ -1437,8 +1300,7 @@ public void saveNetAsMethod(PetriNet pnet, JTextArea area) throws ExceptionInval
             MessageHelper.showException(area, "Error saving method to NetLibrary", ex);
         }
         
-        // Force to recomile the class next time any method from there is used
+        // Force to recompile the class next time any method from there is used
         netLibraryClass = null;
     }
-    
 }
